Spotify API integration

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -18,6 +18,10 @@
         <h2>Debug</h2>
         <p>submitted purl <%= purl %></p>
         <p>subsonic endpoint</p>
+        <h4>Api result Spotify:</h4>
+        <pre>
+            <%= JSON.stringify(spotifyRes, null, 2) %>
+        </pre>
     </div>
 </body>
 
