--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -62,6 +62,17 @@
         a::after {
             content: '💿';
         }
+        ul {
+            display: flex;
+            justify-content: space-evenly;
+            flex-direction: row;
+            flex-wrap: wrap;
+            align-content: center;
+            align-items: center;
+        }
+        li {
+            display: inline-block;
+        }
     </style>
 </head>
 
