--- a/src/views/partials/searchHeader.ejs
+++ b/src/views/partials/searchHeader.ejs
@@ -1,10 +1,13 @@
-<div class="container">
-    <h2> Drome Compare </h2>
+<div id="searchContainer">
     <form action="/" method="GET">
-        <label for="purl">Url</label>
-        <input type="text" id="purl" name="playlist" placeholder="Playlist url" value="<%= locals.purl ? purl : '' %>">
-        <label for="page">Page</label>
-        <input type="number" id="page" name="page" step="1" value="<%= locals.currentPage ? currentPage : 1 %>">
-        <button> Compare </button>
+        <div class="inputRow">
+            <label for="purl">Url</label>
+            <input type="text" id="purl" name="playlist" placeholder="Playlist url" value="<%= locals.purl ? purl : '' %>">
+        </div>
+        <div class="inputRow">
+            <label for="page">Page</label>
+            <input type="number" id="page" name="page" step="1" value="<%= locals.currentPage ? currentPage : 1 %>">
+        </div>
+        <button type="submit"> Compare </button>
     </form>
 </div>
