--- a/src/views/partials/results.ejs
+++ b/src/views/partials/results.ejs
@@ -23,10 +23,12 @@
     <div id="sideContainer">
         <div id="statsContainer">
             <h2>Results for <%= playlistName %></h2>
+            <p class="withIcon"><span class="icon">💿</span><%= results.length %> albums on this page <br/>
+                based on <%= itemsPerPage %> tracks (<%= totalTracks %> total)</p>
             <div class="flexList">
-                <span>💿<%= results.length %> albums based on <%= itemsPerPage %> tracks (<%= totalTracks %> total)</span>
-                <span>✔️ <%= confirmedCount %> Confirmed on this page</span>
+                <span>✔️<%= confirmedCount %> Confirmed on this page</span>
                 <span>❔<%= unconfirmedCount %> Unconfirmed on this page</span>
+                <span>⚠️<%= mismatchCount %> With track mismatches on this page</span>
                 <span>❌<%= missingCount %> Missing on this page</span>
             </div>
         </div>
