--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -63,8 +63,21 @@
             box-shadow: 0 0 10px black;
         }
         .cover {
+            position: absolute;
+            left: 0;
+            top: 0;
             width: 100%;
             height:100%;
+            transition: .25s ease-in-out;
+        }
+        .cover.full-cut {
+            clip-path: polygon(0 0, 200% 0, 100% 0, 100% 0);
+        }
+        .cover.half-cut {
+            clip-path: polygon(0 0, 200% 200%, 100% 100%, 100% 0);
+        }
+        .cover.no-cut {
+            clip-path: polygon(0 0, 0 200%, 100% 100%, 100% 0);
         }
         .overlay {
             position: absolute;
@@ -178,6 +191,24 @@
         }
 
     </script>
+
+</div>
+<script>
+    let serviceIcons = document.querySelectorAll(".albumLinks a");
+    for (let icon of serviceIcons) {
+        let mode = icon.classList.contains('spotify') ? 'full-cut' : 'no-cut';
+        icon.addEventListener("mouseover", function(event) {
+            event.target.closest('.result').querySelector(`.cover.subsonic`).classList.add(mode);
+            event.target.closest('.result').querySelector('.cover.subsonic').classList.remove('half-cut');
+        });
+        icon.addEventListener("mouseout", function(event) {
+            event.target.closest('.result').querySelector('.cover.subsonic').classList.add('half-cut');
+            event.target.closest('.result').querySelector('.cover.subsonic').classList.remove(mode);
+        });
+
+    }
+
+</script>
 </body>
 
 </html>
