Move styles to separate file

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,171 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400&display=swap" rel="stylesheet">
-    <style>
-        @keyframes spinner {
-            from {transform:rotate(0deg);}
-            to {transform:rotate(360deg);}
-        }
-        * {
-            transition: all .25s;
-        }
-        body {
-            background-color: #291528;
-            font-family: 'Noto Sans', sans-serif;
-            color: aliceblue;
-            margin-top: 50px;
-        }
-        #mainTitle {
-            position: absolute;
-            top: 5px;
-            left: 50px;
-        }
-        #searchContainer {
-            display: flex;
-            justify-content: center;
-            margin-top: 15px;
-        }
-        #resultContainer {
-            display:flex;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-        #statsContainer {
-            display: inline-block;
-            text-align: left;
-        }
-        #albumContainer {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            max-width: 1500px;
-            flex: 1 1 750px;
-        }
-        #sideContainer {
-            max-width: 350px;
-        }
-        .result {
-            margin-bottom: 5px;
-            flex-direction: row;
-            flex-wrap: nowrap;
-            width: 160px;
-            height: 160px;
-            position: relative;
-            text-align: center;
-            margin: 15px;
-            box-shadow: 0 0 10px black;
-        }
-        .cover {
-            position: absolute;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height:100%;
-            transition: .25s ease-in-out;
-        }
-        .cover.full-cut {
-            clip-path: polygon(0 0, 200% 0, 100% 0, 100% 0);
-        }
-        .cover.half-cut {
-            clip-path: polygon(0 0, 200% 200%, 100% 100%, 100% 0);
-        }
-        .cover.no-cut {
-            clip-path: polygon(0 0, 0 200%, 100% 100%, 100% 0);
-        }
-        .overlay {
-            position: absolute;
-            bottom: 0;
-            background: linear-gradient(0deg, rgb(0 0 0 / 100%) 0%, rgb(0 0 0 / 75%) 50%, rgba(0,224,255,0) 100%);
-            height: 100%;
-            width: 100%;
-        }
-        .overlayText {
-            width: 100%;
-            bottom: 0;
-            position: absolute;
-            margin-bottom: 10px;
-        }
-        .result .icon {
-            position: absolute;
-            top: 0;
-            padding: 5px 10px 10px 5px;
-            background: aliceblue;
-            border-radius: 0 0 50%;
-            font-size: 2em;
-        }
-        .albumTitle {
-            padding: 0 5px;
-        }
-        .withIcon {
-            margin-left: 25px;
-            position: relative;
-        }
-        .withIcon .icon {
-            position: absolute;
-            left: -25px;
-            width: 25px;
-        }
-        a {
-            color:aliceblue;
-            text-decoration: none;
-            display: block;
-        }
-        a {
-            vertical-align: middle;
-            line-height: 20px;
-            display: inline;
-        }
-        a:hover {
-            transform: scale(1.5);
-        }
-        a svg {
-            margin-bottom: -4px;
-        }
-        a svg:hover {
-            transform: scale(1.25);
-        }
-        .flexList {
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            justify-content: flex-start;
-            line-height: 2em;
-        }
-        .flexList span {
-            display: inline-block;
-            margin-right: 15px;
-        }
-        .pagination {
-            text-align: center;
-        }
-        .pagination form {
-            display: inline-block;
-        }
-        
-        button {
-            background: #635994;
-            color: white;
-            border-radius: 20px;
-            padding: 10px;
-            border: 2px solid #978dc9;
-        }
-        button:hover {
-            border: 2px solid #433392;
-        }
-        input[type=number] {
-            width: 40px;
-        }
-        form .inputRow {
-            display: inline-block;
-            margin-top: 15px;
-        }
-        .spinner::before {
-            display: inline-block;            
-            content: '⚙️';
-            animation: spinner 2s infinite linear;
-        }
-        
-        </style>
+    <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 
 <body>
