--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -89,6 +89,20 @@ body {
     border-radius: 0 0 50%;
     font-size: 2em;
 }
+
+.result .icon.override {
+    background: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%),
+                radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
+}
+
+.overrideDropdown {
+    display:none;
+}
+
+.result .icon:hover .overrideDropdown {
+    display: block;
+}
+
 .albumTitle {
     padding: 0 5px;
 }
