--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -81,6 +81,55 @@ body {
     position: absolute;
     margin-bottom: 10px;
 }
+
+.overlay .commentIcon {
+    display: inline;
+}
+
+.overlay .commentInput {
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    bottom: 0;
+}
+
+.overlayText:hover .commentInput {
+    visibility: visible;
+    opacity: 100%;
+    bottom: -35px;
+    padding-top: 15px;
+}
+
+.overlay .commentInput input[type="text"] {
+    width: 75%;
+}
+
+.overlay .commentInput button {
+    width: 25px;
+    height: 25px;
+    padding: 0;
+}
+
+.commentDisplay {
+    display: inline;
+}
+.commentDisplay .content {
+    display: none;
+    background-color: #291528;
+    color: white;
+
+}
+
+.commentDisplay:hover .content {
+    display: block;
+    left: 0;
+    position: absolute;
+    padding: 5px;
+    border-radius: 3px;
+    top: 0;
+    z-index: 10;
+}
+
 .result .icon {
     position: absolute;
     top: 0;
